--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8"/>
-        <title>Slim 3</title>
-        <link href='//fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
+        <meta charset="utf-8" />
+        <title>Chronicle</title>
         <style>
             body {
                 margin: 50px 0 0 0;
@@ -23,16 +22,31 @@
                 font-weight: 200;
                 margin-bottom: 0;
             }
+
+            hr {
+                width: 75%;
+                margin-left: auto;
+                margin-right: auto;
+            }
         </style>
     </head>
     <body>
-        <h1>Slim</h1>
-        <div>a microframework for PHP</div>
-
-        <?php if (isset($name)) : ?>
-            <h2>Hello <?= htmlspecialchars($name); ?>!</h2>
-        <?php else: ?>
-            <p>Try <a href="http://www.slimframework.com">SlimFramework</a>
-        <?php endif; ?>
+        <h1>Chronicle</h1>
+        <p>
+            Chronicle is a software security project created by
+            <a href="https://paragonie.com">the PHP security and cryptography team at Paragon Initiative Enteprises</a>.
+        </p>
+        <p>
+            Please report any problems on <a href="https://github.com/paragonie/chronicle">Github</a>.
+        </p>
+        <hr />
+        <p>Powered by
+            <a href="https://secure.php.net">PHP 7</a>,
+            <a href="http://www.slimframework.com">Slim</a>,
+            <a href="https://github.com/paragonie/sapient">Sapient</a>,
+            <a href="https://github.com/paragonie/blakechain">Blakechain</a>,
+            <a href="https://github.com/paragonie/sodium_compat">sodium_compat</a>, and
+            <a href="https://download.libsodium.org/doc/">libsodium</a>.
+        </p>
     </body>
 </html>
