Create rudimentary logo for Chronicle.

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -20,7 +20,12 @@
                 font-family: 'Lato', sans-serif;
                 font-size: 100px;
                 font-weight: 200;
+                line-height: 1;
                 margin-bottom: 0;
+            }
+            h1 img {
+                height: 1em;
+                vertical-align: text-bottom;
             }
 
             hr {
@@ -31,7 +36,7 @@
         </style>
     </head>
     <body>
-        <h1>Chronicle</h1>
+        <h1><img src="chronicle-logo.svg" />Chronicle</h1>
         <p>
             Chronicle is a software security project created by
             <a href="https://paragonie.com">the PHP security and cryptography team at Paragon Initiative Enteprises</a>.
