--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -39,7 +39,7 @@
         <h1><img src="chronicle-logo.svg" />Chronicle</h1>
         <p>
             Chronicle is a software security project created by
-            <a href="https://paragonie.com">the PHP security and cryptography team at Paragon Initiative Enteprises</a>.
+            <a href="https://paragonie.com">the PHP security and cryptography team at Paragon Initiative Enterprises</a>.
         </p>
         <p>
             Please report any problems on <a href="https://github.com/paragonie/chronicle">Github</a>.
