UX improvement: Make it easier to find the Chronicle path.

--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -42,6 +42,9 @@
             <a href="https://paragonie.com">the PHP security and cryptography team at Paragon Initiative Enterprises</a>.
         </p>
         <p>
+            <a href="./chronicle">Click Here for the Chronicle API</a>
+        </p>
+        <p>
             Please report any problems on <a href="https://github.com/paragonie/chronicle">Github</a>.
         </p>
         <hr />
